# gym_chad

./: .gitattributes  .gitignore  README.md
derStart/: README.md  analyse.py  main.py  pyproject.toml  qagent.py
die-umwelt2/: pyproject.toml
die-umwelt2/src/die_umwelt2/: __init__.py
die-umwelt2/src/die_umwelt2/envs/: __init__.py  grid_world.py
dieUmwelt/: main.py  pyproject.toml
dieUmwelt/envs/: grid_world.py
dqn/: pyproject.toml
dqn/src/dqn/: __init__.py  agent.py  dqn.py  main.py  replay.py
gpt2/: pyproject.toml
gpt2/src/gpt2/: __init__.py  dataset.py  fineweb_wiki.py  hellaswag.py  train.py
gpt2/src/gpt2/finewiki/: finewiki_train_000001.npy  finewiki_train_000002.npy  finewiki_train_000003.npy  finewiki_train_000004.npy  finewiki_train_000005.npy  finewiki_train_000006.npy  finewiki_train_000007.npy  finewiki_train_000008.npy  finewiki_train_000009.npy  finewiki_train_000010.npy  finewiki_val_000000.npy
micrograd3/: build_makemore.ipynb  build_makemore_part3.ipynb  makemore_ninja_part4.ipynb  makemore_part5.ipynb  micrograd_play.ipynb  nanogpt_play.ipynb  play_gpt2.ipynb  pyproject.toml
micrograd3/.ipynb_checkpoints/: build_makemore-checkpoint.ipynb  build_makemore_part3-checkpoint.ipynb  makemore_ninja_part4-checkpoint.ipynb  makemore_part5-checkpoint.ipynb  micrograd_play-checkpoint.ipynb  nanogpt_play-checkpoint.ipynb  play_gpt2-checkpoint.ipynb
micrograd3/src/micrograd3/: __init__.py
nanogpt/: pyproject.toml
nanogpt/src/nanogpt/: __init__.py  bigram.py  dataset.py  head.py  nanogpt.py
