[project]
name = "die-umwelt2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mihaimaganu17", email = "maganu_gx_mihai@yahoo.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.2",
    "pygame>=2.6.1",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
