[project]
name = "micrograd3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mihaimaganu17", email = "maganu_gx_mihai@yahoo.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jupyterlab-vim>=4.1.4",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "torch>=2.9.1",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
